[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nautobot-app-custom-tunnel-builder"
version = "0.2.3a1"
description = "Nautobot app to build IPsec tunnels on Cisco IOS-XE devices"
authors = [{ name = "NRTC Ops" }]
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
dependencies = [
    "build>=1.4.0",
    "nautobot>=3.0.0,<4.0.0",
    "netmiko>=4.0.0",
    "pip>=26.0.1",
    "twine>=6.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-django",
    "black",
    "flake8",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["nautobot_app_custom_tunnel_builder*"]

[tool.setuptools.package-data]
"nautobot_app_custom_tunnel_builder" = [
    "templates/**/*.html",
    "static/**/*",
]
